--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.1",
+    "react-router-dom": "^6.27.0",
     "sass": "^1.80.6"
   },
   "devDependencies": {
